==> ErichStyger/mcuoneclipse/Examples/MCUXpresso/tinyK22/tinyK22_RoomMonitor/Generated_Code/ASerialLdd2.c <==
#include "FreeRTOS.h" /* FreeRTOS interface */
#include "ASerialLdd2.h"
#include "AS1.h"
#include "LPUART_PDD.h"
#include "SIM_PDD.h"
#define AVAILABLE_EVENTS_MASK (LDD_SERIAL_ON_BLOCK_RECEIVED | LDD_SERIAL_ON_BLOCK_SENT | LDD_SERIAL_ON_BREAK | LDD_SERIAL_ON_ERROR)

LDD_TDeviceData* ASerialLdd2_Init(LDD_TUserData *UserDataPtr)
{
  /* Allocate device structure */
  ASerialLdd2_TDeviceDataPtr DeviceDataPrv;
  /* {FreeRTOS RTOS Adapter} Driver memory allocation: Dynamic allocation is simulated by a pointer to the static object */
  DeviceDataPrv = &DeviceDataPrv__DEFAULT_RTOS_ALLOC;

  /* Clear the receive counters and pointer */
  DeviceDataPrv->InpRecvDataNum = 0x00U; /* Clear the counter of received characters */
  DeviceDataPrv->InpDataNumReq = 0x00U; /* Clear the counter of characters to receive by ReceiveBlock() */
  DeviceDataPrv->InpDataPtr = NULL;    /* Clear the buffer pointer for received characters */
  /* Clear the transmit counters and pointer */
  DeviceDataPrv->OutSentDataNum = 0x00U; /* Clear the counter of sent characters */
  DeviceDataPrv->OutDataNumReq = 0x00U; /* Clear the counter of characters to be send by SendBlock() */
  DeviceDataPrv->OutDataPtr = NULL;    /* Clear the buffer pointer for data to be transmitted */
  DeviceDataPrv->UserDataPtr = UserDataPtr; /* Store the RTOS device structure */
  /* Allocate interrupt vectors */
  /* {FreeRTOS RTOS Adapter} Set interrupt vector: IVT is static, ISR parameter is passed by the global variable */
  INT_LPUART0__BAREBOARD_RTOS_ISRPARAM = DeviceDataPrv;
  /* SIM_SCGC6: LPUART0=1 */
  SIM_SCGC6 |= SIM_SCGC6_LPUART0_MASK;
  /* SIM_SCGC5: PORTC=1 */
  SIM_SCGC5 |= SIM_SCGC5_PORTC_MASK;
  /* PORTC_PCR3: ISF=0,MUX=7 */
  PORTC_PCR3 = (uint32_t)((PORTC_PCR3 & (uint32_t)~(uint32_t)(
                PORT_PCR_ISF_MASK
               )) | (uint32_t)(
                PORT_PCR_MUX(0x07)
               ));
  /* PORTC_PCR4: ISF=0,MUX=7 */
  PORTC_PCR4 = (uint32_t)((PORTC_PCR4 & (uint32_t)~(uint32_t)(
                PORT_PCR_ISF_MASK
               )) | (uint32_t)(
                PORT_PCR_MUX(0x07)
               ));
  /* NVICIP30: PRI30=0x70 */
  NVICIP30 = NVIC_IP_PRI30(0x70);
  /* NVICISER0: SETENA|=0x40000000 */
  NVICISER0 |= NVIC_ISER_SETENA(0x40000000);
  LPUART_PDD_EnableTransmitter(LPUART0_BASE_PTR, PDD_DISABLE); /* Disable transmitter. */
  LPUART_PDD_EnableReceiver(LPUART0_BASE_PTR, PDD_DISABLE); /* Disable receiver. */
  DeviceDataPrv->SerFlag = 0x00U;      /* Reset flags */
  DeviceDataPrv->ErrFlag = 0x00U;      /* Reset error flags */
  /* LPUART0_CTRL: R8T9=0,R9T8=0,TXDIR=0,TXINV=0,ORIE=0,NEIE=0,FEIE=0,PEIE=0,TIE=0,TCIE=0,RIE=0,ILIE=0,TE=0,RE=0,RWU=0,SBK=0,MA1IE=0,MA2IE=0,??=0,??=0,??=0,IDLECFG=0,LOOPS=0,DOZEEN=0,RSRC=0,M=0,WAKE=0,ILT=0,PE=0,PT=0 */
  LPUART0_CTRL = LPUART_CTRL_IDLECFG(0x00); /*  Set the CTRL register */
  /* LPUART0_BAUD: M10=0 */
  LPUART0_BAUD &= (uint32_t)~(uint32_t)(LPUART_BAUD_M10_MASK); /*  Disable 10-bit mode */
  /* LPUART0_STAT: LBKDIF=0,RXEDGIF=0,RXINV=0,BRK13=0,IDLE=0,OR=0,NF=0,FE=0,PF=0,MA1F=0,MA2F=0 */
  LPUART0_STAT &= (uint32_t)~(uint32_t)(
                   LPUART_STAT_LBKDIF_MASK |
                   LPUART_STAT_RXEDGIF_MASK |
                   LPUART_STAT_RXINV_MASK |
                   LPUART_STAT_BRK13_MASK |
                   LPUART_STAT_IDLE_MASK |
                   LPUART_STAT_OR_MASK |
                   LPUART_STAT_NF_MASK |
                   LPUART_STAT_FE_MASK |
                   LPUART_STAT_PF_MASK |
                   LPUART_STAT_MA1F_MASK |
                   LPUART_STAT_MA2F_MASK
                  );                   /*  Set the STATUS register */
  SIM_PDD_SetClockSourceLPUART0(SIM_BASE_PTR, SIM_PDD_LPUART0_PLL_FLL_CLOCK);
  LPUART_PDD_SetBaudRate(LPUART0_BASE_PTR, 781U); /* Set the baud rate register. */
  LPUART_PDD_SetOversamplingRatio(LPUART0_BASE_PTR, 3U);
  LPUART_PDD_EnableSamplingOnBothEdges(LPUART0_BASE_PTR, PDD_ENABLE);
  LPUART_PDD_EnableTransmitter(LPUART0_BASE_PTR, PDD_ENABLE); /* Enable transmitter */
  LPUART_PDD_EnableReceiver(LPUART0_BASE_PTR, PDD_ENABLE); /* Enable receiver */
  LPUART_PDD_EnableInterrupt(LPUART0_BASE_PTR, ( LPUART_PDD_INTERRUPT_RECEIVER | LPUART_PDD_INTERRUPT_PARITY_ERROR | LPUART_PDD_INTERRUPT_FRAMING_ERROR | LPUART_PDD_INTERRUPT_NOISE_ERROR | LPUART_PDD_INTERRUPT_OVERRUN_ERROR )); /* Enable interrupts */
  /* Registration of the device structure */
  PE_LDD_RegisterDeviceStructure(PE_LDD_COMPONENT_ASerialLdd2_ID,DeviceDataPrv);
  return ((LDD_TDeviceData *)DeviceDataPrv);
}

LDD_TError ASerialLdd2_SendBlock(LDD_TDeviceData *DeviceDataPtr, LDD_TData *BufferPtr, uint16_t Size)
{
  ASerialLdd2_TDeviceDataPtr DeviceDataPrv = (ASerialLdd2_TDeviceDataPtr)DeviceDataPtr;

  if (Size == 0U) {                    /* Is the parameter Size within an expected range? */
    return ERR_PARAM_SIZE;             /* If no then error */
  }
  if (DeviceDataPrv->OutDataNumReq != 0x00U) { /* Is the previous transmit operation pending? */
    return ERR_BUSY;                   /* If yes then error */
  }
  /* {FreeRTOS RTOS Adapter} Critical section begin (RTOS function call is defined by FreeRTOS RTOS Adapter property) */
  EnterCritical();
  DeviceDataPrv->OutDataPtr = (uint8_t*)BufferPtr; /* Set a pointer to the output data. */
  DeviceDataPrv->OutDataNumReq = Size; /* Set the counter of characters to be sent. */
  DeviceDataPrv->OutSentDataNum = 0x00U; /* Clear the counter of sent characters. */
  DeviceDataPrv->SerFlag |= ENABLED_TX_INT; /* Set the flag ENABLED_TX_INT */
  LPUART_PDD_EnableInterrupt(LPUART0_BASE_PTR, LPUART_PDD_INTERRUPT_TRANSMITTER); /* Enable TX interrupt */
  /* {FreeRTOS RTOS Adapter} Critical section ends (RTOS function call is defined by FreeRTOS RTOS Adapter property) */
  ExitCritical();
  return ERR_OK;                       /* OK */
}

static void InterruptRx(ASerialLdd2_TDeviceDataPtr DeviceDataPrv)
{
  register uint16_t Data;              /* Temporary variable for data */

  Data = (uint16_t)LPUART_PDD_GetChar8(LPUART0_BASE_PTR); /* Read an 8-bit character from the receiver */
  if (DeviceDataPrv->InpDataNumReq != 0x00U) { /* Is the receive block operation pending? */
    *(DeviceDataPrv->InpDataPtr++) = (uint8_t)Data; /* Put an 8-bit character to the receive buffer */
    DeviceDataPrv->InpRecvDataNum++;   /* Increment received char. counter */
    if (DeviceDataPrv->InpRecvDataNum == DeviceDataPrv->InpDataNumReq) { /* Is the requested number of characters received? */
      DeviceDataPrv->InpDataNumReq = 0x00U; /* If yes then clear number of requested characters to be received. */
      ASerialLdd2_OnBlockReceived(DeviceDataPrv->UserDataPtr);
    }
  }
}

static void InterruptTx(ASerialLdd2_TDeviceDataPtr DeviceDataPrv)
{

  if (DeviceDataPrv->OutSentDataNum < DeviceDataPrv->OutDataNumReq) { /* Is number of sent characters less than the number of requested incoming characters? */
    LPUART_PDD_PutChar8(LPUART0_BASE_PTR, *(DeviceDataPrv->OutDataPtr++)); /* Put a 8-bit character to the transmit register */
    DeviceDataPrv->OutSentDataNum++;   /* Increment the counter of sent characters. */
    if (DeviceDataPrv->OutSentDataNum == DeviceDataPrv->OutDataNumReq) {
      DeviceDataPrv->OutDataNumReq = 0x00U; /* Clear the counter of characters to be send by SendBlock() */
      ASerialLdd2_OnBlockSent(DeviceDataPrv->UserDataPtr);
    }
  } else {
    LPUART_PDD_DisableInterrupt(LPUART0_BASE_PTR, LPUART_PDD_INTERRUPT_TRANSMITTER); /* Disable TX interrupt */
    DeviceDataPrv->SerFlag &= (uint16_t)(~(uint16_t)ENABLED_TX_INT); /* Clear the flag ENABLED_TX_INT */
  }
}
